// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
{
  "error": ""email" must be a valid email",
}
`;

exports[` 2`] = `
{
  "address": "address",
  "bio": "test",
  "city": "Tokyo",
  "country": "JP",
  "cover_image": null,
  "created_at": Any<String>,
  "created_by": Any<String>,
  "culture": "test",
  "description": "test",
  "email": "test@socious.io",
  "followers": 0,
  "followings": 0,
  "geoname_id": null,
  "id": Any<String>,
  "image": null,
  "impact_score": 0,
  "mission": "test",
  "mobile_country_code": null,
  "name": "test ORG",
  "other_party_id": null,
  "other_party_title": null,
  "other_party_url": null,
  "phone": "9379911",
  "search_tsv": Any<String>,
  "shortname": Any<String>,
  "social_causes": [
    "SOCIAL",
    "HEALTH",
  ],
  "status": "ACTIVE",
  "type": "COOP",
  "updated_at": Any<String>,
  "wallet_address": null,
  "website": "http://test.com",
}
`;

exports[` 3`] = `
{
  "address": "address",
  "bio": "test",
  "city": "Tehran",
  "country": "IR",
  "cover_image": null,
  "created_at": Any<String>,
  "created_by": Any<String>,
  "culture": "test",
  "description": "test",
  "email": "test@socious.io",
  "followers": 0,
  "followings": 0,
  "geoname_id": null,
  "id": Any<String>,
  "image": null,
  "impact_score": 0,
  "mission": "test",
  "mobile_country_code": null,
  "name": "test ORG",
  "other_party_id": null,
  "other_party_title": null,
  "other_party_url": null,
  "phone": "9899993",
  "search_tsv": Any<String>,
  "shortname": Any<String>,
  "social_causes": [
    "SOCIAL",
    "MENTAL",
  ],
  "status": "ACTIVE",
  "type": "SOCIAL",
  "updated_at": Any<String>,
  "wallet_address": null,
  "website": "http://test.com",
}
`;

exports[` 4`] = `
{
  "error": ""phone" must be a string",
}
`;

exports[`accept connect request 1`] = `
{
  "connected_at": Any<String>,
  "created_at": Any<String>,
  "id": Any<String>,
  "relation_id": Any<String>,
  "requested": Any<Object>,
  "requested_id": Any<String>,
  "requester": Any<Object>,
  "requester_id": Any<String>,
  "status": "CONNECTED",
  "text": "test",
  "updated_at": Any<String>,
}
`;

exports[`accept connect request 2`] = `
{
  "connected_at": Any<String>,
  "created_at": Any<String>,
  "id": Any<String>,
  "relation_id": Any<String>,
  "requested": Any<Object>,
  "requested_id": Any<String>,
  "requester": Any<Object>,
  "requester_id": Any<String>,
  "status": "CONNECTED",
  "text": "test",
  "updated_at": Any<String>,
}
`;

exports[`block connection 1`] = `
{
  "connected_at": null,
  "created_at": Any<String>,
  "id": Any<String>,
  "relation_id": Any<String>,
  "requested": Any<Object>,
  "requested_id": Any<String>,
  "requester": Any<Object>,
  "requester_id": Any<String>,
  "status": "BLOCKED",
  "text": "test",
  "updated_at": Any<String>,
}
`;

exports[`block connection 2`] = `
{
  "connected_at": null,
  "created_at": Any<String>,
  "id": Any<String>,
  "relation_id": Any<String>,
  "requested": Any<Object>,
  "requested_id": Any<String>,
  "requester": Any<Object>,
  "requester_id": Any<String>,
  "status": "BLOCKED",
  "text": "test",
  "updated_at": Any<String>,
}
`;

exports[`connect request 1`] = `
{
  "connected_at": null,
  "created_at": Any<String>,
  "id": Any<String>,
  "relation_id": Any<String>,
  "requested": Any<Object>,
  "requested_id": Any<String>,
  "requester": Any<Object>,
  "requester_id": Any<String>,
  "status": "PENDING",
  "text": "test",
  "updated_at": Any<String>,
}
`;

exports[`connect request 2`] = `
{
  "connected_at": null,
  "created_at": Any<String>,
  "id": Any<String>,
  "relation_id": Any<String>,
  "requested": Any<Object>,
  "requested_id": Any<String>,
  "requester": Any<Object>,
  "requester_id": Any<String>,
  "status": "PENDING",
  "text": "test",
  "updated_at": Any<String>,
}
`;

exports[`connect request 3`] = `
{
  "connected_at": null,
  "created_at": Any<String>,
  "id": Any<String>,
  "relation_id": Any<String>,
  "requested": Any<Object>,
  "requested_id": Any<String>,
  "requester": Any<Object>,
  "requester_id": Any<String>,
  "status": "PENDING",
  "text": "test",
  "updated_at": Any<String>,
}
`;

exports[`connect request 4`] = `
{
  "connected_at": null,
  "created_at": Any<String>,
  "id": Any<String>,
  "relation_id": Any<String>,
  "requested": Any<Object>,
  "requested_id": Any<String>,
  "requester": Any<Object>,
  "requester_id": Any<String>,
  "status": "PENDING",
  "text": "test",
  "updated_at": Any<String>,
}
`;
